# Lume

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: AI_RULES.md  ARCHITECTURE.md  CHANGELOG_RULES.md  DSA_INVENTORY.md  PLAN.md  PRD.md  data_sources.md  deck_outline.md  references.md
scripts/: check.sh  check_fast.sh  check_no_public_base.sh  check_secrets.sh  dev.sh  reset_db.py  run_axe.sh
services/typo/: pyproject.toml  schema.sql
services/typo/app/: main.py  schemas.py
services/typo/app/adaptations/: chunking.py  color.py  highlight.py  hyphenation.py  mcq_generator.py  spacing.py  syllables.py
services/typo/app/api/: mode_configs.py  routes.py
services/typo/app/data_structures/: adaptation_heap.py  freq_index.py  trie.py
services/typo/app/eda/: eda.ipynb  make_notebook.py  sample_corpus.jsonl  synthesize.py
services/typo/app/ml/: arms.py  bandit.py  features.py  model.py  real_user_arms.py  recommender.py  reward.py
services/typo/app/store/: db.py  paths.py
services/typo/tests/: test_adaptation_heap.py  test_api_examples_match_schema.py  test_bandit.py  test_chunking.py  test_db.py  test_features.py  test_freq_index.py  test_h1_pairing.py  test_hyphenation_dp.py  test_mcq_generator.py  test_mode_configs.py  test_rate_data_source_inference.py  test_rate_inserts_one_event_with_reward.py  test_rate_short_passage_no_log.py  test_recommender_excludes_overrides.py  test_render_cache.py  test_render_does_not_insert_event.py  test_reward.py  test_schemas.py  test_syllables.py  test_trie.py
(+29 files in other folders)
