[project]
name = "typo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.100.0",
    "fastapi>=0.136.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyphen>=0.17.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "textstat>=0.7.13",
    "uvicorn[standard]>=0.46.0",
    "wordfreq>=3.1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Exclude Jupyter notebooks from strict linting (inline cells aren't clean Python)
exclude = ["app/eda/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
